fix (base/index.sass) remove overflow body

--- a/src/styles/base/index.sass
+++ b/src/styles/base/index.sass
@@ -10,8 +10,6 @@ body
     family: $font-roboto
     weight: 400
     size: 14px
-  @include breakpoint(max-width 768px)
-    overflow: hidden
 
 
 .main
